kubernetes/library/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app
  labels:
    app: library
spec:
	replicas: 1
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
        - image: localhost:5000/library
          name: library
          ports:
            - containerPort: 8000
