kubernetes/library/library-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library
  labels:
    app: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-container
  template:
    metadata:
      labels:
        app: library-container
    spec:
      containers:
        - image: localhost:5000/library
          imagePullPolicy: Never
          name: library
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-database-container
  template:
    metadata:
      labels:
        app: library-database-container
        tier: backend
    spec:
      containers:
        - name: library-database-container
          image: postgres:14.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: library-database-volume-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: library-database-volume-mount
          persistentVolumeClaim:
            claimName: library-pvc
