kubernetes/library/library-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  labels:
    app: library
spec:
  type: NodePort
  selector:
    app: library
  ports:
    - port: 8000
      targetPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: library-database-service
spec:
  selector:
    app: library-database-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
