kubernetes/library/library-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: library-ingress
spec:
  rules:
  - host: library.local
    http:
      paths:
      - backend:
          serviceName: library-service
          servicePort: 8000
